--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SQL</title>
-    <link rel="stylesheet" href="public/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <div class="topnav">
@@ -13,8 +13,8 @@
       <a href="#quiz">Quiz</a>
       <a href="#score">Scoreboard</a>
     </div> 
-    <img src="public/assets/Quiz.jpeg">
+    <img src="./assets/Quiz.jpeg">
 
-    <script src="index.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
